package com.example.insertnewclass;

import javax.persistence.Entity;
import javax.persistence.GeneratedValue;
import javax.persistence.GenerationType;
import javax.persistence.Id;
import javax.persistence.Table;
import javax.persistence.Column;
import java.util.Objects;

/**
 * Represents a class entity in the archive.
 * This class is mapped to a database table using JPA annotations.
 */
@Entity
@Table(name = "classes") // Specifies the table name in the database
public class ClassEntity {

    /**
     * Unique identifier for the class.
     * Auto-generated by the database.
     */
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY) // Uses database identity column for primary key generation
    private Long id;

    /**
     * The name of the class.
     * e.g., "10th Grade - Section A"
     */
    @Column(nullable = false, length = 100) // Ensures the name is not null and has a max length
    private String name;

    /**
     * The physical address or location of the class.
     * e.g., "Building C, Room 201"
     */
    @Column(nullable = false, length = 200) // Ensures the address is not null and has a max length
    private String address;

    /**
     * The academic year for which the class is scheduled.
     * e.g., "2024-2025"
     */
    @Column(nullable = false, length = 9) // Ensures the academic year is not null and has a fixed length (YYYY-YYYY)
    private String academicYear;

    /**
     * Default constructor. Required by JPA.
     */
    public ClassEntity() {
    }

    /**
     * Constructor to create a new ClassEntity without an ID (ID will be generated by the database).
     *
     * @param name The name of the class.
     * @param address The address of the class.
     * @param academicYear The academic year of the class.
     */
    public ClassEntity(String name, String address, String academicYear) {
        this.name = name;
        this.address = address;
        this.academicYear = academicYear;
    }

    /**
     * Retrieves the unique identifier of the class.
     * @return The ID of the class.
     */
    public Long getId() {
        return id;
    }

    /**
     * Sets the unique identifier of the class.
     * This is typically used by JPA when loading entities from the database.
     * @param id The ID to set.
     */
    public void setId(Long id) {
        this.id = id;
    }

    /**
     * Retrieves the name of the class.
     * @return The name of the class.
     */
    public String getName() {
        return name;
    }

    /**
     * Sets the name of the class.
     * @param name The name to set.
     */
    public void setName(String name) {
        this.name = name;
    }

    /**
     * Retrieves the address of the class.
     * @return The address of the class.
     */
    public String getAddress() {
        return address;
    }

    /**
     * Sets the address of the class.
     * @param address The address to set.
     */
    public void setAddress(String address) {
        this.address = address;
    }

    /**
     * Retrieves the academic year of the class.
     * @return The academic year of the class.
     */
    public String getAcademicYear() {
        return academicYear;
    }

    /**
     * Sets the academic year of the class.
     * @param academicYear The academic year to set.
     */
    public void setAcademicYear(String academicYear) {
        this.academicYear = academicYear;
    }

    /**
     * Compares this ClassEntity to the specified object. The result is true if and only if
     * the argument is not null and is a ClassEntity object that has the same id, name, address,
     * and academic year as this object.
     * @param o The object to compare this ClassEntity against.
     * @return true if the given object represents a ClassEntity equivalent to this ClassEntity, false otherwise.
     */
    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        ClassEntity that = (ClassEntity) o;
        return Objects.equals(id, that.id) &&
               Objects.equals(name, that.name) &&
               Objects.equals(address, that.address) &&
               Objects.equals(academicYear, that.academicYear);
    }

    /**
     * Returns a hash code value for the object. This method is supported for the benefit of hash tables.
     * @return A hash code value for this object.
     */
    @Override
    public int hashCode() {
        return Objects.hash(id, name, address, academicYear);
    }

    /**
     * Returns a string representation of the object.
     * @return A string representation of the object.
     */
    @Override
    public String toString() {
        return "ClassEntity{" +
               "id=" + id +
               ", name='" + name + '\'' +
               ", address='" + address + '\'' +
               ", academicYear='" + academicYear + '\'' +
               '}';
    }
}